--- a/make_dashboards/templates/ngi_website/index.html
+++ b/make_dashboards/templates/ngi_website/index.html
@@ -502,7 +502,7 @@ jQuery(function($) {
           }
       }
       var weeks = yearweeks.slice(0,num_weeks+1).reverse();
-      var skeys = Array('NovaSeq', 'HiseqX', 'Hiseq', 'Miseq');
+      var skeys = Array('NovaSeq 6000', 'NovaSeqXPlus', 'NextSeq 2000', 'Miseq');
       // Collect all series types
       for(i=0; i<weeks.length; i++){
           var wkeys = Object.keys(data['bp_seq_per_week'][weeks[i]]);
